--- a/contato.css
+++ b/contato.css
@@ -19,21 +19,25 @@ header {
   padding: 10px 0;
   
 }
+
+
+
 .header .nav-item:hover {
-  border-bottom: 2px solid #ffb6c1;
-}
-.header .nav-item {
+  border-bottom: 2px solid #747263;
   color: #808080;
   margin-left: 10px;
   text-decoration: none;
 }
 
+
+
 nav {
   background: linear-gradient( to right,#fff8b1 , #ffd700  ); 
   padding: 10px 0; 
+  
 }
 
-nav ul {
+nav ul  {
   list-style-type: none; 
   margin: 0;
   padding: 0;
@@ -41,7 +45,7 @@ nav ul {
   justify-content:flex-end; 
 }
 
-nav ul a {
+nav ul a  {
   text-decoration: none; 
   color: #000000; 
   font-weight: bold; 
@@ -85,10 +89,69 @@ button.ajuda {
 
 
 
-.rodape img.logo {
-  width: 80px; 
-  margin-bottom: 10px;
-  float:left;
+
+/* css footer definitivo*/
+.rodape {
+  background-color: #FFD700;
+  padding: 5px;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(to right, #fff8b1, #ffd700);
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+.logo-RS img {
+  width: 70px;
+  height: 70px;
+  justify-content:flex-start;
+  display: flex;
+}
+
+.nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.nav ul li {
+  margin-right: 20px;
+}
+
+.icones-sociais a {
+  margin: 0 10px;
+  
+}
+
+.icones-sociais img {
+  width: 30px;
+  height: 30px;
+ 
+
+ 
+ 
+}
+
+.direitos {
+  color: black;
+  text-align: center;
+  font-size: 14px;
+}
+
+
+
+.nav-icone{
+  display:flex;
+  justify-content: center;
+  
+}
+.rodape .nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px; 
   
 }
 
@@ -96,98 +159,12 @@ button.ajuda {
   margin-bottom: 16px;
  display: flex;
  justify-content: center;
-  padding:30px;
+  padding:0px;
 }
+.nav-rodape:hover{
+  border-bottom: 2px solid #747263;
+  color: #808080;
+  margin-left: 10px;
+  text-decoration: none;
 
-.rodape nav  a {
-  text-decoration: none; 
-  color: #000; 
-  margin: 0 10px;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  display: flex;
- 
-}
-
-
-
-
-.rodape {
-  background-color: #FFD700; 
-  padding: 5px;
-  font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient( to right,#fff8b1 , #ffd700  );
-  width: 100%;
-  justify-content: center;
-  text-align: center;
-  
-}
-
-.rodape .icones-sociais {
-  
-  list-style-type: none;
-  margin-top: 10px; 
-}
-
-.rodape .icones-sociais a {
-  margin: 0 10px; 
- 
-  
-}
-
-.rodape .icones-sociais  img {
-  width: 50px; 
-  height: 50px;
-
- 
-}
-
-
-.rodape .nav {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px; 
-  
-  
-}
-
-.rodape .nav ul {
-  list-style-type: none;
- 
-}
-
-.rodape .nav ul li {
-  margin-right: 20px; 
-  
-  
-}
-
-
-.rodape .direitos {
-  color: black; 
-  text-align: center;
-  font-size: 14px;
-}
-
-.logo-RS{
-  
-  display:flex;
-  justify-content: flex-start;
-}
-
-.icones .ul-incones{
-  display:flex;
-  justify-content:center;
-  margin-top: 0px;
-  align-items:center;
-  
-  
-}
-
-.nav-icone{
-  display:flex;
-  justify-content: center;
-  
 }
