--- a/index.css
+++ b/index.css
@@ -111,17 +111,36 @@
     height: 30px;
 }
 
-.resumo-atendimento {
-    border: solid 1px;
+/* css do resumo de atendimento */
+.resumo-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.resumo-atendimento {
+    background-color: #fdda3f;
+    border-radius: 10px;
+    padding: 20px;
     text-align: center;
-    border-radius: 1rem;
-    padding: .5rem;
+    width: 22%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 }
+
+.resumo-atendimento h2 {
+    font-size: 2rem;
+    margin: 0;
+    color: #333;
+}
+
+
+.resumo-atendimento h3 {
+    font-size: 1.1rem;
+    margin: 10px 0 0 0;
+    color: #777;
+}
+
 
 /* CSS - footer */
 .footer-index {
