--- a/blog.css
+++ b/blog.css
@@ -59,7 +59,7 @@ nav ul a  {
   /* css footer definitivo*/
 .rodape {
   background-color: #FFD700;
-  padding: 5px;
+  padding:0;
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
