finalizei a pagina seja voluntario

--- a/contato.css
+++ b/contato.css
@@ -104,9 +104,9 @@ body {
 }
 
 .div-ajuda{
-  background: linear-gradient(to right, #fff8b1, #ffe082);
+  background: linear-gradient(to right, #fff8b1, #fada79);
   padding:3px;
-  margin-bottom:55px;
+  margin-bottom:40px;
 
   }
   
