--- a/sejavoluntario.css
+++ b/sejavoluntario.css
@@ -5,15 +5,15 @@
     padding: 0;
 }
 
-
+ 
 body {
-    font-family: Arial, sans-serif;
-   
-    margin: 0;
-    padding: 0;
-   /* background: linear-gradient(to bottom,#f0eeee ,#c5b97d); testando cor de fundo body*/
-    background-color: #f0eeee;
-  }
+  
+  margin: 0;
+  padding: 0;
+
+  background-color: #ffffcc;
+}
+  
   
   
 header {
@@ -55,32 +55,52 @@ nav ul a  {
   color: #000000; 
   font-weight: bold; 
   margin-right: 20px; 
+
 }
-#ajuda {
-  position:relative;
-  margin-bottom:0px;
+
+.requisitos-container {
+  display: flex;
+  align-items: flex-start; 
+  margin-left: 85px;
+  margin-top: 35px;
+  border: 3px solid #ffe082;
+  margin-right:85px ;
+  margin: 35px 35px; 
+  padding: 20px 20px; 
+}
+
+
+.titulo-requisitos {
+  font-size: 16px;
+  text-align: left;
+  padding-right: 20px; 
+  margin-top: 35px;
+}
+
+.paragrafo-requisitos {
+  list-style-type: none;
+  margin: 0;
   padding: 0;
-  margin-top: auto;
-
-
+  display: flex;
+  flex-direction: column; 
+  justify-content: flex-start; 
+  font-size:13px ;
+  margin-right: 85px;
+  margin-bottom: 45px;
+  
 }
 
-.img-pessoas-ajuda {
-  position: absolute;
-  top: 130%;
-  right: 0;
-  transform: translateY(-50%);
-  width: 600px;
-  height: auto; 
+.paragrafo-requisitos li {
+  margin: 5px 0; 
 }
+
+
 .div-ajuda{
-  background: linear-gradient(to right, #fff8b1, #ffe082);
+  background: linear-gradient(to right, #fff8b1, #FFA000);
   padding:3px;
-  margin-bottom:500px;
-  margin-top: 55px;
- 
- 
-   
+  margin-bottom:40px;
+  margin-top: 80px;
+
   }
   
   
@@ -89,7 +109,7 @@ nav ul a  {
   text-align: left;
   height: 10px;
   margin-left: 85px;
-  margin-top:80px;
+  margin-top:55px;
   font-weight: bold;
 }
 
@@ -121,7 +141,100 @@ nav ul a  {
  
   
 }
-  /* css footer definitivo*/
+
+#ajuda {
+  position:relative;
+  margin-bottom:0px;
+  padding: 0;
+  margin-top: auto;
+
+
+}
+
+.img-pessoas-ajuda {
+    position: absolute;
+    top:58%; 
+    right:0;
+    transform: translateY(-50%);
+    z-index: 1;
+    margin-bottom:20px;
+    width:449px;
+    height:auto;
+    max-width: 100%;
+  }
+  
+  .titulo-voluntario{
+    font-size:  26px;
+    text-align: center; 
+    margin-top:60px;
+    padding-right:55%;
+    display: flex;
+    align-items: center;
+    margin-bottom:16px;
+    justify-content: center;
+    padding:0px;
+    border: 3px solid #ffe082;
+    margin-right:85px ;
+    margin: 35px 35px; 
+    padding: 40px 40px; 
+
+  }
+  .paragrafo-cadastro-voluntario{
+    font-size: 16px;
+    text-align: left;
+    height: 10px;
+    margin-left: 85px;
+    margin-top: 100px;
+  }
+
+  .Formulario-voluntario input,
+  .Formulario-voluntario textarea{
+  display: block;
+  margin-bottom: 10px; 
+  width:25%; 
+  box-sizing: border-box; 
+  color: #353333; 
+  border: 1px solid #6b6a6a; 
+  border-radius: 5px; 
+  padding: 10px; 
+  }
+
+  .Formulario-voluntario {
+    font-size: 16px;
+    text-align: left;
+    margin-left: 85px;
+    margin-top:50px;
+   
+  }
+  
+  .botao-voluntario{
+    
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 15px;
+      text-align: center;
+      text-decoration: none;
+      color: #ffffff;
+      background: linear-gradient(to right, #fff8b1, #FFA000);
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+      border: none;
+      margin-left: 85px;
+      margin-top: 50px;
+    }
+    .botao-voluntario button {
+      color: gray;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+  .cadastro-voluntario{
+    border: 3px solid #ffe082;
+    margin-right:85px ;
+    margin: 35px 35px; 
+    padding: 20px 20px; 
+  }
+  /* css do footer */
 .rodape {
   background-color: #FFD700;
   padding: 0;
