--- a/politica-de-privacidade.css
+++ b/politica-de-privacidade.css
@@ -1,23 +1,39 @@
 * {
+    font-family:Arial, sans-serif;
+    color: #000000;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html {
     background: #faf5dc;
 }
 
-nav {
+
+.navgation {
     background: linear-gradient( to right,#fff8b1 , #ffd700);
     padding: 1rem;
+    
+}
+
+nav {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    border-radius: 5px;
-    margin-top: 1.5px;
+    background: linear-gradient( to left,#eee9b7 , #ffd700);
+    gap: 10px;
+    padding: 5px;
 }
+
+.logo-projeto-RS {
+    height: 100px;
+    padding: .5rem;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-top: 5px;   
+}
+
 
 /* vamos ao css dos textos sobre a política de privacidade */
 
