--- a/politica-de-privacidade.css
+++ b/politica-de-privacidade.css
@@ -7,7 +7,7 @@
 }
 
 html {
-    background: #faf5dc;
+    background: #ebeae6;
 }
 
 
@@ -22,16 +22,23 @@ nav {
     align-items: center;
     justify-content: flex-end;
     background: linear-gradient( to left,#eee9b7 , #ffd700);
-    gap: 10px;
-    padding: 5px;
+   
+}
+
+.container-politica {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: .1rem;
+    background: #eee9b7;
 }
 
 .logo-projeto-RS {
     height: 100px;
     padding: .5rem;
     margin-bottom: 5px;
-    margin-left: 5px;
-    margin-top: 5px;   
+    margin-top: 5px;
+    
 }
 
 
@@ -57,11 +64,24 @@ nav {
     background: #fff098;
     align-items: center;
     text-align: center;
+    padding: .5rem;
     
 }
 
 #email-rs {
+    padding: .2rem;
+    border-radius: 8px;
     text-decoration: none;
+    width: 15rem;
+    text-align: center;
+    
+}
+
+#email-rs:hover {
+    background:#fdf4c1;
+    border-radius: 8px;    
+    transform: scale(1.2);
+    transition: transform 0.5s ease;
 }
 
 
