--- a/index.css
+++ b/index.css
@@ -328,9 +328,76 @@ header {
     height: 25rem;
     
 }
+/* section do ajuda*/
 
+.div-ajuda{
+    background: linear-gradient( to left,#eee9b7 , #ffd700);
+    padding:1rem;
+    margin-bottom:40px;
+    margin-top: 80px;
+  
+    }
+    
+    
+  .paragrafo-ajuda{
+    font-size: 16px;
+    text-align: left;
+    height: 10px;
+    margin-left: 85px;
+    margin-top:55px;
+    font-weight: bold;
+  }
+  
+  .titulo-ajuda{
+    font-size:20px;
+    text-align: left;
+    height: 10px;
+    margin-left: 85px;
+    margin-top:30px;
+    font-weight: bold;
+  
+  }
+  
+  .texto-ajuda{
+    font-size:16px;
+    text-align: left;
+    height: 10px;
+    margin-left: 85px;
+    margin-top:35px;
+    padding-right:55%;
+    
+  
+  
+  }
+  .imagem-whatsapp{
+  
+    margin-left: 85px;
+    margin-top: 55px;
+   
+    
+  }
+  
+  #ajuda {
+    position:relative;
+    margin-bottom:0px;
+    padding: 0;
+    margin-top: auto;
+  
+  
+  }
+  
+  
 
-
+  .img-pessoas-ajuda {
+      position: absolute;
+      top:55%; 
+      right:0;
+      transform: translateY(-50%);
+      z-index: 1;
+      height:250px;
+      max-width: 100%;
+    }
+    
 
 /* CSS - footer */
 .footer-index {
